llvm-spirv/test/negative/spirv-version-controls-2.spt
119734787 1024 393230 12 0
2 Capability Addresses
2 Capability Kernel
5 ExtInstImport 1 "OpenCL.std"
3 MemoryModel 1 2
4 EntryPoint 6 6 "foo"
9 String 11 "kernel_arg_type.foo.int*,"
3 Source 3 102000
3 Name 7 "a"
4 Name 8 "entry"
4 Name 10 "a.addr"
4 Decorate 10 Alignment 4
4 TypeInt 3 32 0
2 TypeVoid 2
4 TypePointer 4 5 3
4 TypeFunction 5 2 4
4 TypePointer 9 7 4


5 Function 2 6 0 5
3 FunctionParameter 4 7

2 Label 8
4 Variable 9 10 7
5 Store 10 7 2 4
1 Return

1 FunctionEnd

; RUN: not llvm-spirv %s -to-binary -o - 2>&1 | FileCheck %s --check-prefix=CHECK-ERROR
;
; CHECK-ERROR: Invalid SPIR-V module: unsupported SPIR-V version number 'unknown (1024)'. Range of supported/known SPIR-V versions is 1.0 (65536) - 1.5 (66816)
